[gd_scene load_steps=7 format=2]

[ext_resource path="res://PaddlePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://PaddleAI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://background.jpg" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 522, 11.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 274.5 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="BackgroundSprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 4 )

[node name="PaddleAI" parent="." instance=ExtResource( 2 )]
position = Vector2( 950, 300 )

[node name="PaddlePlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 74, 300 )

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( 512, 11 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2( 512, 589.5 )
shape = SubResource( 2 )

[node name="GoalLeft" type="Area2D" parent="."]
position = Vector2( 10, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft"]
position = Vector2( 2, 0.5 )
shape = SubResource( 3 )

[node name="GoalRight" type="Area2D" parent="."]
position = Vector2( 1036, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight"]
position = Vector2( -24, 1.5 )
shape = SubResource( 3 )

[node name="Scores" type="HSplitContainer" parent="."]
margin_left = 470.0
margin_top = 240.0
margin_right = 550.0
margin_bottom = 280.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="PlayerScore" type="Label" parent="Scores"]
margin_top = 13.0
margin_right = 8.0
margin_bottom = 27.0
text = "0"

[node name="AIScore" type="Label" parent="Scores"]
margin_left = 20.0
margin_top = 13.0
margin_right = 80.0
margin_bottom = 27.0
text = "0"

[node name="BallSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="WinLoseLabel" type="Label" parent="."]
margin_left = 379.0
margin_top = 140.0
margin_right = 444.0
margin_bottom = 180.0
rect_scale = Vector2( 4, 4 )
text = "dummy"
align = 1

[connection signal="area_entered" from="GoalLeft" to="." method="_on_GoalLeft_area_entered"]
[connection signal="area_entered" from="GoalRight" to="." method="_on_GoalRight_area_entered"]
[connection signal="timeout" from="BallSpawnTimer" to="." method="_on_BallSpawnTimer_timeout"]
